MDL-46597 gradebook: More detailed error messages when importing grades.

--- a/theme/bootstrapbase/less/moodle/grade.less
+++ b/theme/bootstrapbase/less/moodle/grade.less
@@ -27,6 +27,16 @@
     }
 }
 
+.alert.details {
+  margin: -8px 0px 8px 24px;
+  font-size: 14px;
+   border: 0px none !important;
+  background: 0px none;
+  padding: 0px !Important;
+  color: inherit;
+  font-family: 'Courier', monospaced;
+}
+
 // Rubrics
 #page-grade-grading-manage {
     #activemethodselector {
